# SysMLv2-repair-with-KG-SLMs

./: .gitignore  ParseSysML.java  README.md  SysMLParserService.java  SysMLSerializer.java  ast_diagram  ast_diagram_1  build_SysML_AST.ipynb  config.py  data_processing.py  dataset_compilation.ipynb  environment.yml  evaluate_syntax.py  file_manifest_2.json  fine_tuning.ipynb  first_fine_tuning_metrics.csv  formatting.py  freeform.ipynb  generate_domain_aware.ipynb  hpc_run.sh  inference_rag_one_shot.py  inference_rag_zero_shot.py  inference_testing.ipynb  light_training.ipynb  main.py  patching.py  prompts.py  pyproject.toml  quantity_kg.py  readme copy.md  results_analysis.ipynb  results_evaluation.ipynb  split_dataset.py  test.py  test2.sysml  test_results.json  testing.ipynb  testing.py  trainWithKg.py  training.ipynb  (+4 more)
ast_mgm/: SysMLParserService.java  SysMLSerializer.java  build_SysML_AST.ipynb  sysml_utils.py
dataset/: test_dataset.jsonl  validation_dataset.jsonl
dataset_from_haitham/: valid_source_ids.json
dataset_from_haitham/split_data/: split_info.json  train_domain.jsonl
knowledge/: __init__.py  vehicle_kg.py
lora-output/checkpoint-1000/: README.md  rng_state.pth  scheduler.pt  trainer_state.json
lora-output/checkpoint-1339/: adapter_config.json  rng_state.pth  scaler.pt  scheduler.pt  trainer_state.json
lora-output/checkpoint-500/: rng_state.pth  scheduler.pt  trainer_state.json
lora-output/final_trained/: README.md
results/testing/Qwen2.5-Coder-1.5B-Instruct/baseline/: test_results.json
split_data/: val_syntax_valid.jsonl
(+24 files in other folders)
